# tesseract2djvused

./: CMakeLists.txt  README.md  hocr2djvused.cpp  hocr2djvused.h  main.cpp  tesseract2djvused.pro
